--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ locale: en-US
 title: "Michael Ramsdail"
 name: "Michael Ramsdail"
 description: "President & CEO | Strategic Planning • Operations • Community Impact"
-url: "https://michael.ramsdail.github.io"
+url: "https://michael-ramsdail.github.io"
 baseurl: ""  # keep empty for user.github.io root sites
 
 # Theme
